Fix vertical spacing between template nodes for Level 2 and Level 3

--- a/Strut/css/rework_styles.css
+++ b/Strut/css/rework_styles.css
@@ -645,11 +645,11 @@
 
 /* Increase canvas height for higher template levels */
 .template-canvas[data-template-level="2"] .canvas-grid {
-    height: 500px;
+    height: 400px;
 }
 
 .template-canvas[data-template-level="3"] .canvas-grid {
-    height: 600px;
+    height: 500px;
 }
 
 .template-node {
